--- a/views/dashboard/workers.ejs
+++ b/views/dashboard/workers.ejs
@@ -67,8 +67,14 @@
                      workerAddresses.push( workers[idx].address );
                      activeWorkers.push( workers[idx].address );
 
+                     console.log(workers[idx])
+
                      panel = document.createElement( 'div' );
-                     panel.className = 'panel panel-primary autocollapse';
+                     if ( workers[idx].state === 1 ) {
+                        panel.className = 'panel autocollapse panel-warning';
+                     } else {
+                        panel.className = 'panel autocollapse panel-primary';
+                     }
                      panel.id = workers[idx].address;
 
                      var panelHeading = document.createElement( 'div' );
@@ -92,7 +98,11 @@
 
                      var panelTitle = document.createElement( 'h3' );
                      panelTitle.className = 'panel-title';
-                     panelTitle.innerHTML = runningInstances.outerHTML + " " + workers[idx].address;
+                     panelTitle.innerHTML = runningInstances.outerHTML;
+                     if ( workers[idx].alias !== undefined ) {
+                        panelTitle.innerHTML += " " + workers[idx].alias;
+                     }
+                     panelTitle.innerHTML += " - " + workers[idx].address;
                      panelTitle.style.display = 'inline';
                      panelTitle.style = 'margin-top: 25px';
 
@@ -104,12 +114,17 @@
                      rightNav.className = 'nav navbar-nav navbar-right';
                      panelNavBar.appendChild( rightNav );
 
+                     const address = workers[idx].address;
+
                      var pauseBtn = document.createElement( 'label' );
                      pauseBtn.type = 'button';
                      pauseBtn.className = 'btn btn-secondary non-clickable';
-                     if ( workers[idx].status === undefined || workers[idx].status === 0 ) {
-                        pauseBtn.className += ' disabled';
-                     }
+                     pauseBtn.onclick = function () {
+                        $.post( "/api/simulation_instance/pause", { address: address } );
+                     };
+                     //if ( workers[idx].status === undefined || workers[idx].status === 0 ) {
+                     //   pauseBtn.className += ' disabled';
+                     //}
                      pauseBtn.innerHTML = '<span class=\'glyphicon glyphicon-pause non-clickable\'></span><h6 class="non-clickable">PAUSE</h6>';
 
                      var rightNavLi1 = document.createElement( 'li' );
@@ -119,10 +134,13 @@
                      resumeBtn.type = 'button';
                      resumeBtn.className = 'btn btn-secondary non-clickable';
                      resumeBtn.innerHTML = '<span class=\'glyphicon glyphicon-play non-clickable\'></span><h6 class="non-clickable">RESUME</h6>';
-                     if ( workers[idx].status === undefined || workers[idx].status === 1 ) {
-                        console.log( workers[idx].running)
-                        resumeBtn.className += ' disabled';
-                     }
+                     resumeBtn.onclick = function () {
+                        $.post( "/api/simulation_instance/resume", { address: address } );
+                     };
+                     //if ( workers[idx].status === undefined || workers[idx].status === 1 ) {
+                     //   console.log( workers[idx].running)
+                     //   resumeBtn.className += ' disabled';
+                     //}
 
                      var rightNavLi2 = document.createElement( 'li' );
                      rightNavLi2.appendChild( resumeBtn );
@@ -131,9 +149,13 @@
                      stopBtn.type = 'button';
                      stopBtn.className = 'btn btn-secondary non-clickable';
                      stopBtn.innerHTML = '<span class=\'glyphicon glyphicon-stop non-clickable\'></span><h6 class="non-clickable">STOP</h6>';
-                     stopBtn.setAttribute( 'data-toggle', 'confirmation' );
-                     stopBtn.setAttribute( 'data-popout', 'true' );
-                     stopBtn.setAttribute( 'data-singleton', 'true' );
+                     stopBtn.onclick = function () {
+                        $.post( "/api/simulation_instance/stop", { address: address } );
+                     };
+
+                     //stopBtn.setAttribute( 'data-toggle', 'confirmation' );
+                     //stopBtn.setAttribute( 'data-popout', 'true' );
+                     //stopBtn.setAttribute( 'data-singleton', 'true' );
 
                      var rightNavLi3 = document.createElement( 'li' );
                      rightNavLi3.appendChild( stopBtn );
@@ -161,6 +183,12 @@
 
                   } else {
                      activeWorkers.push( workers[idx].address );
+
+                     if ( workers[idx].state === 1 ) {
+                        panel.className = 'panel autocollapse panel-warning';
+                     } else {
+                        panel.className = 'panel autocollapse panel-primary';
+                     }
 
                      var child = panel.getElementsByTagName( '*' );
 
@@ -227,15 +255,26 @@
          xmlhttp.send();
       }
 
+      function pauseCommand() {
+         console.log( "PAUSE" );
+      }
+
+      function resumeCommand() {
+         $.post( "/api/simulation_instance/resume", { address: 123 }, function ( data, status ) {
+            alert( "Data: " + data + "\nStatus: " + status );
+         } );
+      }
+
+      function stopCommand() {
+         console.log( "STOP" );
+      }
+
+
       $( document ).on( 'click', '.panel div.clickable', function ( e ) {
          var $this = $( this ); //Heading
 
          if ( $( e.target ).hasClass( 'non-clickable' ) ) {
             return;
-         }
-
-         if ( $this.hasClass( 'non-clickable' ) ) {
-            console.log( 'eita' );
          }
 
          var $panel = $this.parent( '.panel' );
