Adjustments on command managements

--- a/views/dashboard/workers.ejs
+++ b/views/dashboard/workers.ejs
@@ -28,6 +28,8 @@
 
    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
    <script>
+      var enableClick = true
+
       google.charts.load( 'current', { 'packages': ['gauge'] } );
 
       var prev_handler = window.onload;
@@ -121,7 +123,15 @@
                      pauseBtn.type = 'button';
                      pauseBtn.className = 'btn btn-secondary non-clickable';
                      pauseBtn.onclick = function () {
-                        $.post( "/api/simulation_instance/pause", { address: address } );
+                       if (enableClick) {
+                         $.post("/api/worker/pause", { address: address });
+
+                         enableClick = false
+
+                         setTimeout(function () {
+                           enableClick = true
+                         }, 1000)
+                       }
                      };
                      //if ( workers[idx].status === undefined || workers[idx].status === 0 ) {
                      //   pauseBtn.className += ' disabled';
@@ -136,7 +146,15 @@
                      resumeBtn.className = 'btn btn-secondary non-clickable';
                      resumeBtn.innerHTML = '<span class=\'glyphicon glyphicon-play non-clickable\'></span><h6 class="non-clickable">RESUME</h6>';
                      resumeBtn.onclick = function () {
-                        $.post( "/api/simulation_instance/resume", { address: address } );
+                       if (enableClick) {
+                         $.post("/api/worker/resume", { address: address });
+
+                         enableClick = false
+
+                         setTimeout(function () {
+                           enableClick = true
+                         }, 1000)
+                       }
                      };
                      //if ( workers[idx].status === undefined || workers[idx].status === 1 ) {
                      //   console.log( workers[idx].running)
@@ -151,7 +169,15 @@
                      stopBtn.className = 'btn btn-secondary non-clickable';
                      stopBtn.innerHTML = '<span class=\'glyphicon glyphicon-stop non-clickable\'></span><h6 class="non-clickable">STOP</h6>';
                      stopBtn.onclick = function () {
-                        $.post( "/api/simulation_instance/stop", { address: address } );
+                       if (enableClick) {
+                         $.post("/api/worker/stop", { address: address });
+
+                         enableClick = false
+
+                         setTimeout(function () {
+                           enableClick = true
+                         }, 1000)
+                       }
                      };
 
                      //stopBtn.setAttribute( 'data-toggle', 'confirmation' );
